--- a/Mini_Project_Tree-Based_Algorithms.ipynb
+++ b/Mini_Project_Tree-Based_Algorithms.ipynb
@@ -218,7 +218,6 @@
     "y = encoder.transform(y)\n",
     "\n",
     "#split test and train\n",
-    "# X_train, X_test, y_train, y_test = train_test_split(x, y, random_state = 42, test_size = 0.2, stratify = y)\n",
     "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size = 0.2)\n",
     "\n",
     "clf = DecisionTreeClassifier()\n",
@@ -230,20 +229,6 @@
     "clf_grid = GridSearchCV(clf, param_grid = param,  cv=cv)\n",
     "clf_grid.fit(X_train, y_train)\n",
     "\n",
-    "# from sklearn.preprocessing import LabelEncoder\n",
-    "# x = german_df.drop('Class', axis=1)\n",
-    "# y = german_df['Class']\n",
-    "# test = LabelEncoder.fit_transform(x,y)\n",
-    "\n",
-    "\n",
-    "# print(german_df.columns)\n",
-    "# for col in german_df.columns:\n",
-    "#     print (col)\n",
-    "\n",
-    "# show all the unique values for each column\n",
-    "# for column in german_df.columns:\n",
-    "#     unique_values = german_df[column].unique()\n",
-    "#     print(f'{column}: {unique_values}')\n",
     "\n"
    ]
   },
@@ -397,46 +382,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PATH=C:\\Users\\jk\\anaconda3;C:\\Users\\jk\\anaconda3\\Library\\mingw-w64\\bin;C:\\Users\\jk\\anaconda3\\Library\\usr\\bin;C:\\Users\\jk\\anaconda3\\Library\\bin;C:\\Users\\jk\\anaconda3\\Scripts;C:\\Users\\jk\\anaconda3\\bin;C;C:\\Program Files\\Git\\Users\\jk\\anaconda3\\condabin;C:\\Users\\jk\\bin;C:\\Program Files\\Git\\mingw64\\bin;C:\\Program Files\\Git\\usr\\local\\bin;C:\\Program Files\\Git\\usr\\bin;C:\\Program Files\\Git\\usr\\bin;C:\\Program Files\\Git\\mingw64\\bin;C:\\Program Files\\Git\\usr\\bin;C:\\Users\\jk\\bin;C:\\Python39\\Scripts;C:\\Python39;C:\\Windows\\system32;C:\\Windows;C:\\Windows\\System32\\Wbem;C:\\Windows\\System32\\WindowsPowerShell\\v1.0;C:\\Windows\\System32\\OpenSSH;C:\\Program Files\\NVIDIA Corporation\\NVIDIA NvDLISR;C:\\Program Files (x86)\\NVIDIA Corporation\\PhysX\\Common;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0;C:\\WINDOWS\\System32\\OpenSSH;C:\\Program Files\\nodejs;C:\\ProgramData\\chocolatey\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\dotnet;C:\\Users\\jk\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\jk\\AppData\\Roaming\\npm;C:\\Users\\jk\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\msys64\\mingw64\\bin;C:\\Program Files\\Git\\usr\\bin\\vendor_perl;C:\\Program Files\\Git\\usr\\bin\\core_perl\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'FileName.pdf'"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "! PATH\n",
-    "\n",
-    "\n",
-    "import graphviz\n",
-    "\n",
-    "dot = graphviz.Digraph(comment='The Round Table')\n",
-    "\n",
-    "dot.node('A', 'King Arthur')\n",
-    "dot.node('B', 'Sir Bedevere the Wise')\n",
-    "dot.node('L', 'Sir Lancelot the Brave')\n",
-    "dot.edges(['AB', 'AL'])\n",
-    "dot.edge('B', 'L', constraint='false')\n",
-    "\n",
-    "dot.render('FileName', view=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [
@@ -462,8 +407,6 @@
    "source": [
     "# Your code here! :)\n",
     "import dtreeviz\n",
-    "# from dtreeviz.trees import *\n",
-    "# viz = dtreeviz.model(clf, X_train, y_train, target_name = 'Class', feature_names = X_train.columns, class_names = list(encoder.classes_))\n",
     "\n",
     "optimized_clf = DecisionTreeClassifier(max_depth = 10, max_features = \"sqrt\", min_samples_leaf = 5, \n",
     "                                      min_samples_split = 30, random_state = 13)\n",
@@ -880,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -888,18 +831,8 @@
      "output_type": "stream",
      "text": [
       "1.0.2\n",
-      "0.2.1\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'PDPbox.pdpbox' has no attribute 'pdp_interact'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_27048\\1603841207.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPDPbox\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPDPbox\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpdpbox\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpdp_interact\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;31m# from pdpbox.pdp_calc_utils import pd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'PDPbox.pdpbox' has no attribute 'pdp_interact'"
+      "0.2.1\n",
+      "['__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', '_axes_modify', '_calc_figsize', '_calc_memory_usage', '_check_classes', '_check_dataset', '_check_feature', '_check_frac_to_plot', '_check_grid_type', '_check_memory_limit', '_check_model', '_check_percentile_range', '_check_target', '_expand_default', '_find_bucket', '_find_onehot_actual', '_get_grid_combos', '_get_grids', '_get_string', '_make_bucket_column_names', '_make_bucket_column_names_percentile', '_make_list', '_modify_legend_ax', '_plot_title', '_sample_data', 'np', 'pd', 'psutil']\n"
      ]
     }
    ],
@@ -920,7 +853,8 @@
     "\n",
     "import PDPbox\n",
     "\n",
-    "print(dir(PDPbox.pdpbox.pdp_interact))\n",
+    "# print(dir(PDPbox.pdpbox.pdp_interact))\n",
+    "print(dir(PDPbox.pdpbox.utils))\n",
     "# from pdpbox.pdp_calc_utils import pd\n",
     "\n",
     "# from pdpbox import pdp\n",
